Fix wrapping of desserts from previous rounds

--- a/src/frontend/boards/sgp.scoped.scss
+++ b/src/frontend/boards/sgp.scoped.scss
@@ -75,15 +75,23 @@ button {
   background-color: $text;
 }
 
-figure > ul,
-figure > ol {
-  margin-block-start: 0;
-  margin-block-end: 0;
-  padding-inline-start: 0;
-  list-style-type: none;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+figure {
+  ul,
+  ol {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0;
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .playedCards {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
 }
 
 .gameover {
